--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -10,3 +10,8 @@ tasks:
 vscode:
   extensions:
     - vscjava.vscode-java-pack
+    - redhat.java
+    - vscjava.vscode-java-debug
+    - vscjava.vscode-java-dependency
+    - vscjava.vscode-maven
+    - vscjava.vscode-java-test
