--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,7 +5,7 @@
 
 tasks:
   - name: Setup & Build
-    before: sdk install java 21-tem < /dev/null
+    before: sdk install 21.0.4-tem < /dev/null
     init: mvn install -DskipTests=true
 vscode:
   extensions:
