Minor upgrade to JVM

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
     "java.configuration.runtimes": [
         {
             "name": "JavaSE-21",
-            "path": "/home/gitpod/.sdkman/candidates/java/21-tem",
+            "path": "/home/gitpod/.sdkman/candidates/java/21.0.4-tem",
             "default": true
         }
     ],
